# athas

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  .tool-versions  ACP_TEST_SIMULATION.md  AGENTS.md  AGENT_PANEL_ARCHITECTURE.md  AGENT_PANEL_QUICK_REFERENCE.md  AGENT_PANEL_UI_IMPROVEMENTS.md  AGENT_PANEL_UI_VISUAL_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DOCS_INDEX.md  HOOK_REFACTORING_REPORT.md  LICENSE  MCP_INTEGRATION_SUMMARY.md  NATIVE_AGENT_HOOK_SUMMARY.md  README.md  RUN_ATHAS.sh  SUPAGLASS_INSTALADO.md  SUPAGLASS_PRONTO.md  SYSTEM_FILE_FILTERING.md  TERMINAL_FONTS_FIX.md  THEME_CONVERSION_EXAMPLES.md  THEME_SYSTEM_SUMMARY.md  ZED_ADAPTATION_GUIDE.md  ZED_FONTS_SETUP.md  ZED_THEMES_COMPATIBILITY.md  apply-supaglass-theme.sh  biome.json  commitlint.config.cjs  eslint.config.js  index.html  knip.json  package-lock.json  package.json  pnpm-lock.yaml  refactoring-plan.md  (+7 more)
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  bun.yml  format-lint.yml  release.yml  rust.yml
apps/desktop/: package.json
apps/web/: README.md  package.json
backup-terminal-cleanup/: terminal-core.tsx  terminal-refactored.tsx  terminal-tab-bar-refactored.tsx  terminal-unified-store.ts
docs/: ACP_COMPLETE_GUIDE.md  ACP_QUICK_REFERENCE.md  Architecture.md  CHANGELOG_NATIVE_AGENT.md  CONTRIBUTING.md  Development.md  Features.md  NATIVE_AGENT_IMPLEMENTATION.md
docs/develop/: linux.md  macos.md  windows.md
interceptor/: Cargo.toml  README.md
interceptor/src/: error.rs  helpers.rs  lib.rs  parser.rs  proxy.rs  server.rs  state.rs  types.rs  websocket.rs
scripts/: check-all-ts.sh  check-ts-files.sh  convert-zed-themes.ts  format-staged-biome.sh  format-staged-rust.sh  intercept-build.sh  prevent-build.sh
scripts/linux/: setup.sh
scripts/windows/: setup.ps1
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: acp_bridge.rs  claude_bridge.rs  file_watcher.rs  interceptor_types.rs  lib.rs  logger.rs  lsp.rs  main.rs  mcp_bridge.rs  menu.rs  shell.rs  ssh.rs  terminal.rs  xterm_terminal.rs
src-tauri/src/commands/: acp.rs  claude.rs  database.rs  font.rs  format.rs  fs.rs  fuzzy.rs  git.rs  github.rs  lsp.rs  mcp.rs  mod.rs  shell.rs  sqlite.rs  terminal.rs  theme.rs  tokens.rs  watcher.rs  web.rs  window.rs  xterm.rs  zed_import.rs
src-tauri/src/commands/git/: blame.rs  branch.rs  commit.rs  diff.rs  hunk.rs  mod.rs  remote.rs  staging.rs  stash.rs  status.rs  tag.rs  types.rs  utils.rs
src-tauri/src/lsp/: client.rs  config.rs  manager.rs  mod.rs  types.rs  utils.rs
src/components/: api-key-modal.tsx  bottom-pane.tsx  breadcrumb.tsx  button.tsx  code-editor.tsx  command-bar.tsx  command-palette.tsx  completion-dropdown.tsx  diagnostics-overlay.tsx  diagnostics-pane.tsx  diff-viewer.tsx  dropdown.tsx  editor-footer.tsx  extensions-view.tsx  file-icon.tsx  file-reload-toast.tsx  file-tree.tsx  find-bar.tsx  font-preloader.tsx  font-style-injector.tsx  git-view.tsx  github-copilot-settings.tsx  image-generation-modal.tsx  image-viewer.tsx  inline-completion.tsx  minimap-pane.tsx  model-provider-selector.tsx  outline-view.tsx  quick-edit-modal.tsx  remote-connection-view.tsx  resizable-right-pane.tsx  resizable-sidebar.tsx  search-view.tsx  sqlite-viewer.tsx  tab-bar.tsx  terminal.tsx  toast.tsx  vim-command-line.tsx  welcome-screen.tsx  zoom-indicator.tsx
src/constants/: core-features.ts  editor-constants.ts  ignored-patterns.ts
src/contexts/: toast-context.tsx
src/core/: command-system.ts  history-manager.ts
src/database/: sqlite-viewer.tsx  types.ts
src/extensions/: basic-editing-extension.ts  editor-api.ts  extension-manager.ts  extension-types.ts  syntax-highlighting-extension.ts  test-extension.ts
src/hooks/: index.ts  use-breadcrumb-toggles.ts  use-buffers.ts  use-code-highlighting.ts  use-context-menus.tsx  use-cursor-actions.ts  use-debounced-callback.ts  use-editor-decorations.ts  use-editor-interactions.ts  use-editor-keyboard.ts  use-editor-layout.ts  use-editor-scroll.ts  use-editor-sync.ts  use-file-operations.ts  use-file-selection.ts  use-file-watcher-events.ts  use-folder-operations.ts  use-git-gutter.ts  use-hover.ts  use-keyboard-shortcuts-wrapper.ts  use-keyboard-shortcuts.ts  use-line-tokenizer.ts  use-lsp-completion.ts  use-lsp.ts  use-menu-events-wrapper.ts  use-menu-events.ts  use-performance.ts  use-quick-edit.ts  use-recent-folders.ts  use-remote-connection.ts  use-scroll.ts  use-search.ts  use-settings-sync.ts  use-settings.ts  use-terminal-drag-drop.ts  use-terminal-tabs.ts  use-ui-state.ts  use-updater.ts  use-vim-keyboard.ts  use-vim.ts  (+6 more)
src/lib/: pane-group.ts
src/lsp/: configs.ts  lsp-client.ts  manager.ts  types.ts
src/settings/: store.ts
src/store/: code-editor-store.ts  file-watcher-store.ts  ui-state.ts
src/stores/: ai-chat-mention-store.ts  ai-chat-store.ts  api-keys-store.ts  app-store.ts  buffer-store.ts  code-editor-store.ts  editor-completion-store.ts  editor-config-store.ts  editor-config.ts  editor-content-store.ts  editor-cursor-store.ts  editor-debug-store.ts  editor-decorations-store.ts  editor-history-store.ts  editor-instance-store.ts  editor-instance.ts  editor-lines-store.ts  editor-search-store.ts  editor-settings-store.ts  editor-view-store.ts  file-system-actions.ts  file-system-store.ts  file-tree-store.ts  file-watcher-store.ts  font-store.ts  git-blame-hover-store.ts  git-blame-store.ts  git-store.ts  lsp-store.ts  persistent-settings-store.ts  project-store.ts  recent-files-store.ts  recent-folders-store.ts  recent-projects-store.ts  search-results-store.ts  search-view-store.ts  settings-store.ts  sidebar-store.ts  terminal-panel-store.ts  terminal-store.ts  (+9 more)
src/styles/: editor-cursor.css  editor-line-based.css  editor-performance.css  prism-terminal.css  prism-theme.css  token-theme.css  utils.css  vim.css  zed-fonts.css
zed-references/: README.md
(+475 files in other folders)
