[package]
name = "interceptor"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
bon = "3.6.4"
bytes = "1.8"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.1", features = ["derive"] }
thin-logger = "0.1.4"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
