[package]
name = "athas-code"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "athas_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
interceptor = { path = "../interceptor" }
rusqlite = { version = "0.29.0", features = ["bundled"] }
git2 = "0.18"
window-vibrancy = "0.6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
ssh2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
async-std = "1.12"
lazy_static = "1.4"
portable-pty = "0.8"
anyhow = "1.0"
lsp-types = { version = "0.95", features = ["proposed"] }
crossbeam-channel = "0.5"
base64 = "0.21"
notify = "8.1.0"
notify-debouncer-mini = "0.6.0"
tauri-plugin-log = "2.6.0"
colored = "3.0.0"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rand = "0.8.5"
