[package]
name = "athas-code"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lints]
workspace = true

[lib]
name = "athas_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4.41", features = ["serde"] }
colored = "3.0.0"
crossbeam-channel = "0.5"
env_logger = "0.11.8"
futures-util = "0.3"
git2 = "0.18"
interceptor = { path = "../interceptor" }
lazy_static = "1.4"
log = "0.4.27"
lsp-types = { version = "0.95", features = ["proposed"] }
notify = "8.1.0"
notify-debouncer-mini = "0.6.0"
portable-pty = "0.8"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
tree-sitter = "0.25.8"
tree-sitter-go = "0.23.4"
tree-sitter-highlight = "0.25.8"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-ruby = "0.23.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-yaml = "0.7.1"
tree-sitter-embedded-template = "0.23.0"
tree-sitter-python = "0.23.6"
tree-sitter-html = "0.23.0"
tree-sitter-css = "0.23.1"
tree-sitter-bash = "0.25.0"
tree-sitter-md = "0.3.2"
unicode-width = "0.2.1"
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
vt100 = "0.15"
walkdir = "2.5.0"
window-vibrancy = "0.6.0"
tree-sitter-toml-ng = "0.7.0"
tempfile = "3.20.0"
fontdb = "0.23.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
rand = "0.8.5"
